[tool.poetry]
name = "hypermodern-python-pico"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Pico Geyer <picogeyer@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PicoGeyer/hypermodern-python"
repository = "https://github.com/PicoGeyer/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
